Fix bug: can't minus a number.

--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 * PuLang - To My Life Teacher
 ** Build
 *** Windows
-    We use Cmake and Ninja. Make sure you are at the project root. Then:
+    We use *Cmake* and *Ninja*. Make sure you are at the project root. Then:
     #+begin_src bash
       mkdir build
       cd build
